2012-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* tests/doRUnit.R: In "development releases" (such as 0.9.15.5) we
	now default to setting the required CRAN-test-workaround-kludge
	"RunAllRcppTests" to "yes" as a default -- but not for actual
	releases (with versions such as 0.9.15)

2012-11-04  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h: fixed module bug (virtual function
        was not defined)

2012-11-03  JJ Allaire <jj@rstudio.org>

        * Use CLINK_CPPFLAGS rather than PKG_CXXFLAGS for LinkingTo
        include directories (identical behavior to inline)

2012-11-03  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/which_min.h : sugar which.min
        * include/Rcpp/sugar/functions/which_max.h : sugar which.max
        * include/Rcpp/module/Module.h : added get_function_ptr which returns
        the pointer of the target function as a DL_FUNC

2012-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.rmath.R: More tests added

2012-11-02  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h : factored CppFunction in its own
	file and added the get_function_ptr virtual method. added
	documentation
        * include/Rcpp/module/Module_generated_CppFunction.h: implementation
	of get_function_ptr in classes that derive CppFunction
        * src/Module.cpp: s/get_function_ptr/get_function/
        * include/Rcpp/module/Module.h : factored out and documented.
	s/get_function_ptr/get_function/

2012-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.rmath.R: New unit test file added

2012-11-01  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: change 'envir' param to 'env' for consistency with
	the interface of loadModule
	* man/sourceCpp.Rd: documentation updates
	* man/cppFunction.Rd: documentation updates

2012-11-01  Romain Francois <romain@r-enthusiasts.com>
